[package]
name = "blacksky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atrium-api = { version = "0.13.0", features = ["agent"] }
atrium-xrpc-client = "0.1.2"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
